--- a/css/morning.css
+++ b/css/morning.css
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(30,1fr);
   grid-template-rows: repeat(10,1fr);
   flex-direction:column;
+  height:780px;
 }
 
 body {
@@ -270,31 +271,84 @@ a {
     border: 10px solid #434554;
 }
 
+.steelv1{
+  grid-row: 4/7;
+  grid-column: 13/14;
+  background-color: #434554;
+  height: 97%;
+  width: 25%;
+  transform: scale(.75);
+}
+
 .steel{
   grid-row: 2/7;
   grid-column: 19/20;
   background-color: #434554;
   height: 100%;
-  width: 20%;
+  width: 25%;
   transform: scale(.75);
 }
 
 .steel1{
-  grid-row: 3/7;
+  grid-row: 4/7;
   grid-column: 15/16;
   background-color: #434554;
-  height: 100%;
-  width: 20%;
-  transform: scale(.70);
+  height: 95%;
+  width: 22%;
+  transform: translateY(-30px);
 }
-.steel2{
+.steel2 {
+    grid-row: 2/7;
+    grid-column: 17/18;
+    background-color: #434554;
+    height: 108%;
+    width: 27%;
+    transform: scale(0.6);
+}
+
+.steel3 {
   grid-row: 2/7;
-  grid-column: 17/18;
+  grid-column: 21/22;
   background-color: #434554;
-  height: 100%;
-  width: 20%;
-  transform: scale(.75);
+  height: 99%;
+  width: 26%;
+  transform: scale(0.83);
 }
+
+.steel4 {
+  grid-row: 2/7;
+  grid-column: 23/24;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: scale(0.95);
+}
+.steel5 {
+  grid-row: 2/7;
+  grid-column: 25/26;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+}
+
+.steel6 {
+  grid-row: 2/7;
+  grid-column: 27/28;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: translateY(-11px);
+}
+
+.steel7 {
+  grid-row: 2/7;
+  grid-column: 29/30;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: translateY(-15px);
+}
+
 
 .water {
   background-color: #527B9B;
