--- a/css/morning.css
+++ b/css/morning.css
@@ -123,11 +123,66 @@ a {
     left: -60px;
 }
 
-
 @-webkit-keyframes ray_anim {
 		0% { -webkit-transform: rotate(0deg); transform: rotate(0deg);}
     100% { -webkit-transform: rotate(360deg); transform: rotate(360deg);}
 }
+
+/*  clouds */
+
+.cloud1{
+  grid-row: 2/4;
+  grid-column: 13/17;
+  width:90px;
+  height:90px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  border:3px solid grey;
+}
+
+.cloud2{
+  grid-row: 2/4;
+  grid-column: 14/17;
+  width:120px;
+  height:120px;
+  background: #fff;
+  border-radius: 200px 200px 200px 200px;
+  transform:translateY(-43px);
+  z-index: 2;
+}
+
+.cloud3{
+  grid-row: 2/4;
+  grid-column: 12/17;
+  width:70px;
+  height:70px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateY(27px);
+
+}
+.cloud4{
+  grid-row: 2/4;
+  grid-column: 15/17;
+  width:90px;
+  height:90px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateX(26px);
+  border:3px solid grey;
+}
+
+.cloud10{
+  grid-row: 2/4;
+  grid-column: 11/13;
+  width:50px;
+  height:50px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateY(45px);
+  border:3px solid grey;
+}
+
 /*  left hand side garden*/
 .trees1{
   grid-row: 7;
@@ -523,6 +578,7 @@ a {
   height: 90%;
   width: 26%;
   transform: scale(0.95);
+  z-index: 7;
 }
 .steel5 {
   grid-row: 2/7;
@@ -530,6 +586,7 @@ a {
   background-color: #434554;
   height: 90%;
   width: 26%;
+  z-index: 7;
 }
 
 .steel6 {
