--- a/css/morning.css
+++ b/css/morning.css
@@ -137,7 +137,6 @@ a {
   height:90px;
   background: #fff;
 	border-radius: 200px 200px 200px 200px;
-  border:3px solid grey;
 }
 
 .cloud2{
@@ -169,7 +168,6 @@ a {
   background: #fff;
 	border-radius: 200px 200px 200px 200px;
   transform:translateX(26px);
-  border:3px solid grey;
 }
 
 .cloud10{
@@ -180,7 +178,6 @@ a {
   background: #fff;
 	border-radius: 200px 200px 200px 200px;
   transform:translateY(45px);
-  border:3px solid grey;
 }
 
 /*  left hand side garden*/
@@ -265,6 +262,7 @@ a {
   width: 100%;
   align-items: top;
   transform:translateY(-22px);
+  z-index: 20;
 }
 
 /* opera house */
@@ -275,6 +273,7 @@ a {
   height:80%;
   width:100%;
   clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
+  z-index: 20;
 }
 
 .foundation {
@@ -285,6 +284,7 @@ a {
   width: 100%;
   align-items: top;
   transform:translateY(-22px);
+  z-index: 20;
 }
 
 .foundation-lhs {
@@ -293,7 +293,7 @@ a {
   background-color: #D39F6F;
   height:80%;
   width:100%;
-  z-index: 8;
+  z-index: 20;
 }
 
 .foundation-rhs {
@@ -303,7 +303,7 @@ a {
   height:80%;
   width:100%;
   clip-path:polygon(45% 0%, 100% 30%, 100% 100%, 30% 100%, 0 100%, 0% 5%);
-  z-index: 5;
+  z-index: 20;
 }
 
 .front-tent{
@@ -347,7 +347,7 @@ a {
   border-top-right-radius: 75%;
   z-index: 6;
   transform: scale(0.5);
-  opacity: 0.6;
+  opacity: 0.5;
 }
 
 .lhs-arch3{
@@ -398,7 +398,7 @@ a {
   border-top-left-radius: 100%;
   clip-path: polygon(100% -6%, 82% 60%, 70% 100%, -8% 62%, -55% -19%);
   z-index: 1;
-  opacity: 0.6;
+  opacity: 0.5;
   transform: scale(0.7);
 }
 
@@ -436,7 +436,7 @@ a {
   grid-column: 9/13;
   border-top-left-radius: 100%;
   clip-path:polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
-  opacity: 0.6;
+  opacity: 0.5;
   transform:scale(.6);
   z-index: 3;
 }
@@ -615,8 +615,17 @@ a {
   grid-column: 26/31;
   background-color:#465b46;
   clip-path: polygon(0 0, 100% 0%, 100% 100%, 33% 100%);
-  height:55%
+  height: 55%;
+  z-index: 10;
+  animation-name: ripple;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
+
+@keyframes ripple {
+    from {height: 55%;transform: translateY(0px); }
+    to   {height: 45%;transform: translateY(-15px);}
+  }
 
 .ferry_cabin{
   grid-row: 7/9;
@@ -624,7 +633,15 @@ a {
   background-color: #F9BA62;
   z-index: 3;
   height:70%;
+  z-index: 10;
+  animation-name: ripple2;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
 
+@keyframes ripple2 {
+    from {height: 70%; }
+    to   {height: 60%; }
 }
 .ferry_front{
   grid-row: 7/8;
@@ -632,7 +649,7 @@ a {
   background-color: #F9BA62;
   z-index: 3;
   clip-path: polygon(100% 1%, 0% 100%, 100% 100%);
-
+  z-index: 10;
 }
 
 .ferry_front2{
@@ -642,7 +659,17 @@ a {
   z-index: 3;
   clip-path: polygon(0 0, 100% 100%, 100% 0);
   height:41%;
+  z-index: 10;
+  animation-name: ripple3;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
+
+@keyframes ripple3 {
+    from {height: 41%; }
+    to   {height: 21%; }
+}
+
 .ferry-window{
   grid-row: 8;
   grid-column: 29/31;
@@ -651,7 +678,9 @@ a {
   z-index: 5;
   transform: translateY(-35px);
   background: linear-gradient(white, black);
+  z-index: 10;
 }
+
 .ferry-window2{
   grid-row: 8;
   grid-column: 28/29;
@@ -661,6 +690,7 @@ a {
   transform: translateY(-35px);
   clip-path: polygon(100% -70%, 30% 100%, 100% 100%);
   background: linear-gradient(white, black);
+  z-index: 10;
 }
 
 .ferry-window3{
@@ -668,7 +698,7 @@ a {
   grid-column: 29/31;
   background-color: #fff;
   height:15%;
-  z-index: 5;
+  z-index: 10;
   transform: translateY(-46px);
 }
 .ferry-window4{
@@ -676,7 +706,7 @@ a {
   grid-column: 28/29;
   background-color: #fff;
   height:15%;
-  z-index: 5;
+  z-index: 10;
   transform: translateY(-46px);
   clip-path: polygon(100% -198%, 73% 100%, 100% 100%);
 }
@@ -704,17 +734,194 @@ a {
   grid-column: 27;
   background-color: #fff;
   height:9%;
-  z-index: 5;
+  z-index: 10;
   transform: translateY(9px);
   opacity: 0.7;
-
+  animation-name: ripple4;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
 
+@keyframes ripple4 {
+    from {transform: translateY(9px);transform: translateY(10px); }
+    to   {transform: translateY(1px);transform: translateY(-1px); }
+}
 
-
+/* water  */
 .water {
   background-color: #527B9B;
   grid-row: 8/11;
   grid-column: 1/31;
   height:100%;
 }
+
+.ripple-lightblue{
+  grid-row: 8/9;
+  grid-column: 1/15;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+.ripple-lightblue2{
+  grid-row: 8/9;
+  grid-column: 15/31;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+
+.ripple-darkblue{
+  grid-row: 9;
+  grid-column: 1/7;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue2{
+  grid-row: 9;
+  grid-column: 7/15;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue3{
+  grid-row: 9;
+  grid-column: 15/22;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue4{
+  grid-row: 9;
+  grid-column: 22/32;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-white{
+  grid-row: 8/9;
+  grid-column: 1/2;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  z-index: 5;
+}
+
+.ripple-lightblue3{
+  grid-row: 10;
+  grid-column: 1/15;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+.ripple-lightblue4{
+  grid-row: 10;
+  grid-column: 15/31;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+
+.ripple-darkblue5{
+  grid-row: 10;
+  grid-column: 1/7;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue6{
+  grid-row:10;
+  grid-column: 7/15;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue7{
+  grid-row: 10;
+  grid-column: 15/22;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue8{
+  grid-row: 10;
+  grid-column: 22/32;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-white{
+  grid-row: 8/9;
+  grid-column: 1/2;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  z-index: 5;
+}
+@keyframes waves {
+  0% {
+    height: 40%;
+  	border-radius: 0% 0% 50% 50%;
+	}
+  50% {
+    height: 60%;
+		border-radius: 0% 0% 10% 10%;
+	}
+  100% {
+    height: 40%;
+  	border-radius: 0 0 50% 50%;
+	}
