--- a/css/night.css
+++ b/css/night.css
@@ -1,8 +1,927 @@
-body{
-  background-color:#063254;
+.container{
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(30,1fr);
+  grid-template-rows: repeat(10,1fr);
+  flex-direction:column;
+  height:780px;
 }
 
-a{
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #063254;
+}
+
+a {
   color: white;
   text-decoration: none;
 }
+
+.sun {
+  position: absolute;
+	top:50px;
+	left:50px;
+
+	margin: auto;
+	width:70px;
+	height:70px;
+	border-radius:50%;
+	background:#D3CE57;
+	opacity:0.9;
+	box-shadow: 0px 0px 40px 15px white;
+}
+
+.ray_box {
+  position: absolute;
+  margin: auto;
+	top:0px;
+	left:0;
+	right:0;
+	bottom:0;
+  width:70px;
+  -webkit-animation: ray_anim 120s linear infinite;
+  animation: ray_anim 120s linear infinite;
+}
+.ray {
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
+		background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
+    margin-left:10px;
+    border-radius:80% 80% 0 0;
+    position:absolute;
+    opacity:0.1;
+}
+
+.ray1 {
+    height:170px;
+    width:30px;
+   -webkit-transform: rotate(180deg);
+    top:-175px;
+    left: 15px;
+}
+.ray2 {
+    height:100px;
+    width:8px;
+   -webkit-transform: rotate(220deg);
+    top:-90px;
+    left: 75px;
+}
+.ray3 {
+    height:170px;
+    width:50px;
+   -webkit-transform: rotate(250deg);
+    top:-80px;
+    left: 100px;
+}
+.ray4 {
+    height:120px;
+    width:14px;
+   -webkit-transform: rotate(305deg);
+    top:30px;
+    left: 100px;
+}
+.ray5 {
+    height:140px;
+    width:30px;
+   -webkit-transform: rotate(-15deg);
+    top:60px;
+    left: 40px;
+}
+.ray6 {
+    height:90px;
+    width:50px;
+   -webkit-transform: rotate(30deg);
+    top:60px;
+    left: -40px;
+}
+.ray7 {
+    height:180px;
+    width:10px;
+   -webkit-transform: rotate(70deg);
+    top:-35px;
+    left: -40px;
+}
+.ray8 {
+    height:120px;
+    width:30px;
+   -webkit-transform: rotate(100deg);
+    top:-45px;
+    left:-90px;
+}
+.ray9 {
+    height:80px;
+    width:10px;
+   -webkit-transform: rotate(120deg);
+    top:-65px;
+    left:-60px;
+}
+.ray10 {
+    height:190px;
+    width:23px;
+   -webkit-transform: rotate(150deg);
+    top:-185px;
+    left: -60px;
+}
+
+@-webkit-keyframes ray_anim {
+		0% { -webkit-transform: rotate(0deg); transform: rotate(0deg);}
+    100% { -webkit-transform: rotate(360deg); transform: rotate(360deg);}
+}
+
+/*  clouds */
+
+.cloud1{
+  grid-row: 2/4;
+  grid-column: 13/17;
+  width:90px;
+  height:90px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+}
+
+.cloud2{
+  grid-row: 2/4;
+  grid-column: 14/17;
+  width:120px;
+  height:120px;
+  background: #fff;
+  border-radius: 200px 200px 200px 200px;
+  transform:translateY(-43px);
+  z-index: 2;
+}
+
+.cloud3{
+  grid-row: 2/4;
+  grid-column: 12/17;
+  width:70px;
+  height:70px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateY(27px);
+
+}
+.cloud4{
+  grid-row: 2/4;
+  grid-column: 15/17;
+  width:90px;
+  height:90px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateX(26px);
+}
+
+.cloud10{
+  grid-row: 2/4;
+  grid-column: 11/13;
+  width:50px;
+  height:50px;
+  background: #fff;
+	border-radius: 200px 200px 200px 200px;
+  transform:translateY(45px);
+}
+
+/*  left hand side garden*/
+.trees1{
+  grid-row: 7;
+  grid-column: 1/2;
+  background-color:#4A8739;
+  height: 100%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+  z-index: 2;
+  box-shadow: inset 14px 9px 30px #43544F;
+}
+.trees1a{
+  grid-row: 7;
+  grid-column: 1/2;
+  background-color:#4A8739;
+  height: 129%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  z-index: 3;
+  transform:scale(.5);
+}
+
+.trees2{
+  grid-row: 7;
+  grid-column: 2/3;
+  background-color:#4A8739;
+  height: 100%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+  z-index: 2;
+  box-shadow: inset 14px 9px 30px #43544F;
+}
+
+.trees2a{
+  grid-row: 7;
+  grid-column: 2/3;
+  background-color:#4A8739;
+  height: 129%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  z-index: 3;
+  transform:scale(.5);
+}
+.trees3{
+  grid-row: 7;
+  grid-column: 3/4;
+  background-color:#4A8739;
+  height: 100%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+  z-index: 2;
+  box-shadow: inset 14px 9px 30px #43544F;
+}
+.trees3a{
+  grid-row: 7;
+  grid-column: 3/4;
+  background-color:#4A8739;
+  height: 129%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  z-index: 3;
+  transform:scale(.5);
+}
+
+.trees4{
+  grid-row: 6/8;
+  grid-column: 1/4;
+  background-color:#205426;
+  height: 80%;
+  width: 100%;
+  clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+  box-shadow: inset 14px 9px 30px #000;
+}
+
+.ground {
+  grid-row:8/11;
+  grid-column: 1/4;
+  background-color: #205426;
+  height:12%;
+  width: 100%;
+  align-items: top;
+  transform:translateY(-22px);
+  z-index: 20;
+}
+
+/* opera house */
+.foundation-stairs {
+  grid-row: 7;
+  grid-column: 5/7;
+  background-color: #D39F6F;
+  height:80%;
+  width:100%;
+  clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
+  z-index: 20;
+}
+
+.foundation {
+  grid-row:8/11;
+  grid-column: 4/15;
+  background-color: #876638;
+  height:12%;
+  width: 100%;
+  align-items: top;
+  transform:translateY(-22px);
+  z-index: 20;
+}
+
+.foundation-lhs {
+  grid-row: 7;
+  grid-column: 6/11;
+  background-color: #D39F6F;
+  height:80%;
+  width:100%;
+  z-index: 20;
+}
+
+.foundation-rhs {
+  grid-row: 7;
+  grid-column: 11/13;
+  background-color: #D39F6F;
+  height:80%;
+  width:100%;
+  clip-path:polygon(45% 0%, 100% 30%, 100% 100%, 30% 100%, 0 100%, 0% 5%);
+  z-index: 20;
+}
+
+.front-tent{
+  grid-row: 7;
+  grid-column: 13/15;
+  background-color: #FFF;
+  height:70%;
+  width:100%;
+  clip-path: polygon(27% 67%, 100% 88%, 100% 100%, 50% 100%, 0 100%, 0 72%);
+  border: 2px solid black;
+}
+
+.lhs-arch1{
+  width:75%;
+  height: 100%;
+  background-color:#000;
+  grid-row: 6;
+  grid-column: 6/8;
+  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 27% 100%);
+  border-top-right-radius: 100%;
+}
+
+.lhs-arch2{
+  width:100%;
+  height: 100%;
+  background-color:#FFF;
+  grid-row: 6;
+  grid-column: 6/8;
+  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
+  border-top-right-radius: 100%;
+  z-index: 6;
+  transform: scale(1.2);
+}
+.lhs-arch2s{
+  width:60%;
+  height: 107%;
+  background-color:#D3CE57;
+  grid-row: 6;
+  grid-column: 6/9;
+  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
+  border-top-right-radius: 75%;
+  z-index: 6;
+  transform: scale(0.5);
+  opacity: 0.5;
+}
+
+.lhs-arch3{
+  width:80%;
+  height: 95%;
+  background-color:#fff;
+  grid-row: 6;
+  grid-column: 6/8;
+  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
+  border-top-right-radius: 100%;
+  padding-top: 4px;
+  z-index: 8;
+  transform:translateX(70px);
+  border:1px solid #000;
+}
+.lhs-arch4{
+  width:75%;
+  height: 100%;
+  background-color:#000;
+  grid-row: 6;
+  grid-column: 6/8;
+  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 20% 100%);
+  border-top-right-radius: 100%;
+  transform:translateX(70px);
+  z-index: 7
+}
+
+.rhs-arch1{
+  width:90%;
+  height: 100%;
+  background-color:#fff;
+  grid-row: 5/7;
+  grid-column: 8/11;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  z-index: 1;
+  transform:translateX(15px);
+  border:2px solid #000;
+  transform:scale(1.1);
+}
+
+.rhs-arch1s{
+  width: 103%;
+  height: 110%;
+  background-color: #D3CE57;
+  grid-row: 5/7;
+  grid-column: 8/10;
+  border-top-left-radius: 100%;
+  clip-path: polygon(100% -6%, 82% 60%, 70% 100%, -8% 62%, -55% -19%);
+  z-index: 1;
+  opacity: 0.5;
+  transform: scale(0.7);
+}
+
+.rhs-arch2{
+  width:60%;
+  height: 100%;
+  background-color:#000;
+  grid-row: 5/7;
+  grid-column: 8/11;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  z-index: 0;
+  transform:translateX(58px);
+  border:2px solid #000;
+}
+
+.rhs-arch3{
+  width:80%;
+  height: 100%;
+  background-color:#fff;
+  grid-row: 5/7;
+  grid-column: 9/13;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% -6%, 82% 60%, 70% 100%, -8% 62%, -55% -19%);
+  transform:translateX(15px);
+  border:1px solid #000;
+  z-index: 3;
+}
+
+.rhs-arch3s{
+  width:81%;
+  height: 115%;
+  background-color:#D3CE57;
+  grid-row: 5/7;
+  grid-column: 9/13;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  opacity: 0.5;
+  transform:scale(.6);
+  z-index: 3;
+}
+
+.rhs-arch4{
+  width:80%;
+  height: 100%;
+  background-color:#000;
+  grid-row: 5/7;
+  grid-column: 9/13;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  transform:translateX(19px);
+  border:1px solid #000;
+}
+
+.rhs-arch5{
+  width:80%;
+  height: 75%;
+  background-color:#fff;
+  grid-row: 5/7;
+  grid-column: 10/14;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  transform:translateY(42px);
+  border:1px solid #000;
+  z-index: 6;
+}
+
+.rhs-arch6{
+  width:66%;
+  height: 75%;
+  background-color:#000;
+  grid-row: 5/7;
+  grid-column: 10/15;
+  border-top-left-radius: 100%;
+  clip-path:polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
+  transform:translateY(42px);
+  border:1px solid #000;
+  z-index: 5;
+}
+/*  ////////////////////////////////////   */
+
+/* bridge */
+
+.blinking-bill{
+  grid-row: 2;
+  grid-column: 29;
+  background-color: red;
+  width: 50%;
+  height:60%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  transform: translateY(-63px);
+  animation-name: blinking;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes blinking {
+  from {background-color: red;}
+  to {background-color: #000; }
+}
+
+.bridge-deck{
+  grid-row: 6;
+  grid-column: 1/31;
+  height:20%;
+  width:100%;
+  background-color:#434554;
+}
+
+.bridge-arch {
+    grid-row: 1/6;
+    grid-column: 11/32;
+    border-top-left-radius: 100%;
+    clip-path: polygon(100% 0%, 84% 60%, 100% 100%, 0% 100%, 10% 6%);
+    transform: translateY(42px);
+    border: 20px solid #434554;
+}
+
+.bridge-arch2 {
+    grid-row: 2/6;
+    grid-column: 12/32;
+    border-top-left-radius: 100%;
+    clip-path: polygon(100% 0%, 84% 60%, 100% 100%, 0% 100%, 10% 6%);
+    transform: translateY(42px);
+    border: 10px solid #434554;
+}
+
+.steelv1{
+  grid-row: 4/7;
+  grid-column: 13/14;
+  background-color: #434554;
+  height: 97%;
+  width: 25%;
+  transform: scale(.75);
+}
+
+.steel{
+  grid-row: 2/7;
+  grid-column: 19/20;
+  background-color: #434554;
+  height: 100%;
+  width: 25%;
+  transform: scale(.75);
+}
+
+.steel1{
+  grid-row: 4/7;
+  grid-column: 15/16;
+  background-color: #434554;
+  height: 95%;
+  width: 22%;
+  transform: translateY(-30px);
+}
+.steel2 {
+    grid-row: 2/7;
+    grid-column: 17/18;
+    background-color: #434554;
+    height: 108%;
+    width: 27%;
+    transform: scale(0.6);
+}
+
+.steel3 {
+  grid-row: 2/7;
+  grid-column: 21/22;
+  background-color: #434554;
+  height: 99%;
+  width: 26%;
+  transform: scale(0.83);
+}
+
+.steel4 {
+  grid-row: 2/7;
+  grid-column: 23/24;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: scale(0.95);
+  z-index: 7;
+}
+.steel5 {
+  grid-row: 2/7;
+  grid-column: 25/26;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  z-index: 7;
+}
+
+.steel6 {
+  grid-row: 2/7;
+  grid-column: 27/28;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: translateY(-11px);
+}
+
+.steel7 {
+  grid-row: 2/7;
+  grid-column: 29/30;
+  background-color: #434554;
+  height: 90%;
+  width: 26%;
+  transform: translateY(-15px);
+}
+/* ///////////////////////////////////////////// */
+
+/*  ferry */
+
+.ferry_hull{
+  grid-row: 8/10;
+  grid-column: 26/31;
+  background-color:#465b46;
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 33% 100%);
+  height: 55%;
+  z-index: 10;
+  animation-name: ripple;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ripple {
+    from {height: 55%;transform: translateY(0px); }
+    to   {height: 45%;transform: translateY(-15px);}
+  }
+
+.ferry_cabin{
+  grid-row: 7/9;
+  grid-column: 29/31;
+  background-color: #F9BA62;
+  z-index: 3;
+  height:70%;
+  z-index: 10;
+  animation-name: ripple2;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ripple2 {
+    from {height: 70%; }
+    to   {height: 60%; }
+}
+.ferry_front{
+  grid-row: 7/8;
+  grid-column: 28/29;
+  background-color: #F9BA62;
+  z-index: 3;
+  clip-path: polygon(100% 1%, 0% 100%, 100% 100%);
+  z-index: 10;
+}
+
+.ferry_front2{
+  grid-row: 8/9;
+  grid-column: 28/29;
+  background-color: #F9BA62;
+  z-index: 3;
+  clip-path: polygon(0 0, 100% 100%, 100% 0);
+  height:41%;
+  z-index: 10;
+  animation-name: ripple3;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ripple3 {
+    from {height: 41%; }
+    to   {height: 21%; }
+}
+
+.ferry-window{
+  grid-row: 8;
+  grid-column: 29/31;
+  background-color: #000;
+  height:30%;
+  z-index: 5;
+  transform: translateY(-35px);
+  background: linear-gradient(white, black);
+  z-index: 10;
+}
+
+.ferry-window2{
+  grid-row: 8;
+  grid-column: 28/29;
+  background-color: #000;
+  height:30%;
+  z-index: 5;
+  transform: translateY(-35px);
+  clip-path: polygon(100% -70%, 30% 100%, 100% 100%);
+  background: linear-gradient(white, black);
+  z-index: 10;
+}
+
+.ferry-window3{
+  grid-row: 8;
+  grid-column: 29/31;
+  background-color: #fff;
+  height:15%;
+  z-index: 10;
+  transform: translateY(-46px);
+}
+.ferry-window4{
+  grid-row: 8;
+  grid-column: 28/29;
+  background-color: #fff;
+  height:15%;
+  z-index: 10;
+  transform: translateY(-46px);
+  clip-path: polygon(100% -198%, 73% 100%, 100% 100%);
+}
+
+.ferry-antenna{
+  grid-row: 6;
+  grid-column: 29/30;
+  background-color:#F9BA62;
+  z-index: 3;
+  width:89%;
+  height:104%;
+  clip-path: polygon(96% 0, 100% 0, 5% 100%, 0% 100%);
+}
+.ferry-antenna2{
+  grid-row: 7;
+  grid-column: 29/30;
+  background-color:#F9BA62;
+  z-index: 3;
+  width:30%;
+  height:17%;
+  transform: translateY(-13px);
+}
+.ferry-name{
+  grid-row: 8;
+  grid-column: 27;
+  background-color: #fff;
+  height:9%;
+  z-index: 10;
+  transform: translateY(9px);
+  opacity: 0.7;
+  animation-name: ripple4;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes ripple4 {
+    from {transform: translateY(9px);transform: translateY(10px); }
+    to   {transform: translateY(1px);transform: translateY(-1px); }
+}
+
+/* water  */
+.water {
+  background-color: #527B9B;
+  grid-row: 8/11;
+  grid-column: 1/31;
+  height:100%;
+}
+
+.ripple-lightblue{
+  grid-row: 8/9;
+  grid-column: 1/15;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+.ripple-lightblue2{
+  grid-row: 8/9;
+  grid-column: 15/31;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+
+.ripple-darkblue{
+  grid-row: 9;
+  grid-column: 1/7;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue2{
+  grid-row: 9;
+  grid-column: 7/15;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue3{
+  grid-row: 9;
+  grid-column: 15/22;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue4{
+  grid-row: 9;
+  grid-column: 22/32;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-white{
+  grid-row: 8/9;
+  grid-column: 1/2;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  z-index: 5;
+}
+
+.ripple-lightblue3{
+  grid-row: 10;
+  grid-column: 1/15;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+.ripple-lightblue4{
+  grid-row: 10;
+  grid-column: 15/31;
+  background-color:#70A7D3;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 4;
+}
+
+.ripple-darkblue5{
+  grid-row: 10;
+  grid-column: 1/7;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue6{
+  grid-row:10;
+  grid-column: 7/15;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue7{
+  grid-row: 10;
+  grid-column: 15/22;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-darkblue8{
+  grid-row: 10;
+  grid-column: 22/32;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 80%;
+  animation-name: waves;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform: translateY(-55px);
+}
+.ripple-white{
+  grid-row: 8/9;
+  grid-column: 1/2;
+  background-color:#476B87;
+  border-radius:0 0 50% 50%;
+  height: 60%;
+  animation-name: waves;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  z-index: 5;
+}
+@keyframes waves {
+  0% {
+    height: 40%;
+  	border-radius: 0% 0% 50% 50%;
+	}
+  50% {
+    height: 60%;
+		border-radius: 0% 0% 10% 10%;
+	}
+  100% {
+    height: 40%;
+  	border-radius: 0 0 50% 50%;
+	}
