--- a/css/afternoon.css
+++ b/css/afternoon.css
@@ -132,7 +132,8 @@ a {
   width: 100%;
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
-  box-shadow: inset 14px 9px 30px #43544F; }
+  box-shadow: inset 14px 9px 30px #43544F;
+  background-color: #4A8739; }
 
 .trees1a {
   grid-row: 7;
@@ -147,12 +148,12 @@ a {
 .trees2 {
   grid-row: 7;
   grid-column: 2/3;
-  background-color: #4A8739;
   height: 100%;
   width: 100%;
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
-  box-shadow: inset 14px 9px 30px #43544F; }
+  box-shadow: inset 14px 9px 30px #43544F;
+  background-color: #4A8739; }
 
 .trees2a {
   grid-row: 7;
@@ -167,12 +168,12 @@ a {
 .trees3 {
   grid-row: 7;
   grid-column: 3/4;
-  background-color: #4A8739;
   height: 100%;
   width: 100%;
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
-  box-shadow: inset 14px 9px 30px #43544F; }
+  box-shadow: inset 14px 9px 30px #43544F;
+  background-color: #4A8739; }
 
 .trees3a {
   grid-row: 7;
@@ -269,18 +270,6 @@ a {
   z-index: 6;
   transform: scale(1.2); }
 
-.lhs-arch2s {
-  /* width:60%;
-  height: 107%;
-  background-color:#D3CE57;
-  grid-row: 6;
-  grid-column: 6/9;
-  clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
-  border-top-right-radius: 75%;
-  z-index: 6;
-  transform: scale(0.5);
-  opacity: 0.5; */ }
-
 .lhs-arch3 {
   width: 80%;
   height: 95%;
@@ -318,18 +307,6 @@ a {
   border: 2px solid #000;
   transform: scale(1.1); }
 
-.rhs-arch1s {
-  /* width: 103%;
-  height: 110%;
-  background-color: #D3CE57;
-  grid-row: 5/7;
-  grid-column: 8/10;
-  border-top-left-radius: 100%;
-  clip-path: polygon(100% -6%, 82% 60%, 70% 100%, -8% 62%, -55% -19%);
-  z-index: 1;
-  opacity: 0.5;
-  transform: scale(0.7); */ }
-
 .rhs-arch2 {
   width: 60%;
   height: 100%;
@@ -353,18 +330,6 @@ a {
   transform: translateX(15px);
   border: 1px solid #000;
   z-index: 3; }
-
-.rhs-arch3s {
-  /* width:81%;
-  height: 115%;
-  background-color:#D3CE57;
-  grid-row: 5/7;
-  grid-column: 9/13;
-  border-top-left-radius: 100%;
-  clip-path:polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
-  opacity: 0.5;
-  transform:scale(.6);
-  z-index: 3; */ }
 
 .rhs-arch4 {
   width: 80%;
@@ -413,7 +378,7 @@ a {
   border-top-right-radius: 50%;
   transform: translateY(-63px);
   animation-name: blinking;
-  animation-duration: 4s;
+  animation-duration: 2s;
   animation-iteration-count: infinite; }
 
 @keyframes blinking {
@@ -666,7 +631,7 @@ a {
   grid-column: 1/15;
   background-color: #70A7D3;
   border-radius: 0 0 50% 50%;
-  height: 60%;
+  height: 80%;
   animation-name: waves;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -734,7 +699,7 @@ a {
   border-radius: 0 0 50% 50%;
   height: 60%;
   animation-name: waves;
-  animation-duration: 4s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   z-index: 5; }
 
@@ -788,6 +753,7 @@ a {
   background-color: #476B87;
   border-radius: 0 0 50% 50%;
   height: 80%;
+  height: 80%;
   animation-name: waves;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -811,7 +777,7 @@ a {
   border-radius: 0 0 50% 50%;
   height: 60%;
   animation-name: waves;
-  animation-duration: 4s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   z-index: 5; }
 
