--- a/css/afternoon.css
+++ b/css/afternoon.css
@@ -15,18 +15,36 @@ a {
   color: white;
   text-decoration: none; }
 
+.afternoon1 {
+  grid-row: 1/11;
+  grid-column: 1/32;
+  background: linear-gradient(to bottom right, #0F7FD3, yellow); }
+
 .shark {
   clip-path: polygon(0 0, 10% 100%, 100% 100%);
   background-color: #B1C4D3;
-  grid-row: 9;
-  grid-column: 4;
-  z-index: 20;
+  grid-row: 8;
+  grid-column: 1;
+  z-index: 9;
+  position: relative;
   box-shadow: inset 23px 12px 15px #43544F;
   border-top-left-radius: 50%;
   animation-name: shark;
-  animation-duration: 4s;
+  animation-duration: 15s;
   animation-iteration-count: infinite; }
 
+@keyframes shark {
+  from {
+    left: -300px; }
+  to {
+    left: 1800px; }
+  from {
+    left: -300px;
+    grid-row: 8; }
+  to {
+    left: 1800px;
+    grid-row: 9;
+    transform: scale(1.3); } }
 .sun {
   position: absolute;
   top: 300px;
@@ -37,7 +55,8 @@ a {
   border-radius: 50%;
   background: #D3CE57;
   opacity: 0.9;
-  box-shadow: 0px 0px 40px 15px white; }
+  box-shadow: 0px 0px 40px 15px white;
+  z-index: 5; }
 
 .ray_box {
   position: absolute;
@@ -48,7 +67,8 @@ a {
   bottom: 0;
   width: 70px;
   -webkit-animation: ray_anim 120s linear infinite;
-  animation: ray_anim 120s linear infinite; }
+  animation: ray_anim 120s linear infinite;
+  z-index: 5; }
 
 .ray {
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
@@ -56,77 +76,88 @@ a {
   margin-left: 10px;
   border-radius: 80% 80% 0 0;
   position: absolute;
-  opacity: 0.1; }
+  opacity: 0.1;
+  z-index: 5; }
 
 .ray1 {
   height: 170px;
   width: 30px;
   -webkit-transform: rotate(180deg);
   top: -175px;
-  left: 15px; }
+  left: 15px;
+  z-index: 5; }
 
 .ray2 {
   height: 100px;
   width: 8px;
   -webkit-transform: rotate(220deg);
   top: -90px;
-  left: 75px; }
+  left: 75px;
+  z-index: 5; }
 
 .ray3 {
   height: 170px;
   width: 50px;
   -webkit-transform: rotate(250deg);
   top: -80px;
-  left: 100px; }
+  left: 100px;
+  z-index: 5; }
 
 .ray4 {
   height: 120px;
   width: 14px;
   -webkit-transform: rotate(305deg);
   top: 30px;
-  left: 100px; }
+  left: 100px;
+  z-index: 5; }
 
 .ray5 {
   height: 140px;
   width: 30px;
   -webkit-transform: rotate(-15deg);
   top: 60px;
-  left: 40px; }
+  left: 40px;
+  z-index: 5; }
 
 .ray6 {
   height: 90px;
   width: 50px;
   -webkit-transform: rotate(30deg);
   top: 60px;
-  left: -40px; }
+  left: -40px;
+  z-index: 5; }
 
 .ray7 {
   height: 180px;
   width: 10px;
   -webkit-transform: rotate(70deg);
   top: -35px;
-  left: -40px; }
+  left: -40px;
+  z-index: 5; }
 
 .ray8 {
   height: 120px;
   width: 30px;
   -webkit-transform: rotate(100deg);
   top: -45px;
-  left: -90px; }
+  left: -90px;
+  z-index: 5; }
 
 .ray9 {
   height: 80px;
   width: 10px;
   -webkit-transform: rotate(120deg);
   top: -65px;
-  left: -60px; }
+  left: -60px;
+  z-index: 5; }
 
 .ray10 {
   height: 190px;
   width: 23px;
   -webkit-transform: rotate(150deg);
   top: -185px;
-  left: -60px; }
+  left: -60px;
+  z-index: 5; }
 
 @-webkit-keyframes ray_anim {
   0% {
@@ -145,7 +176,8 @@ a {
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
   box-shadow: inset 14px 9px 30px #43544F;
-  background-color: #4A8739; }
+  background-color: #4A8739;
+  z-index: 19; }
 
 .trees1a {
   grid-row: 7;
@@ -154,7 +186,7 @@ a {
   height: 129%;
   width: 100%;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  z-index: 3;
+  z-index: 20;
   transform: scale(0.5); }
 
 .trees2 {
@@ -165,7 +197,8 @@ a {
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
   box-shadow: inset 14px 9px 30px #43544F;
-  background-color: #4A8739; }
+  background-color: #4A8739;
+  z-index: 19; }
 
 .trees2a {
   grid-row: 7;
@@ -174,7 +207,7 @@ a {
   height: 129%;
   width: 100%;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  z-index: 3;
+  z-index: 20;
   transform: scale(0.5); }
 
 .trees3 {
@@ -185,7 +218,8 @@ a {
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
   z-index: 2;
   box-shadow: inset 14px 9px 30px #43544F;
-  background-color: #4A8739; }
+  background-color: #4A8739;
+  z-index: 19; }
 
 .trees3a {
   grid-row: 7;
@@ -194,7 +228,7 @@ a {
   height: 129%;
   width: 100%;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  z-index: 3;
+  z-index: 20;
   transform: scale(0.5); }
 
 .trees4 {
@@ -204,7 +238,8 @@ a {
   height: 80%;
   width: 100%;
   clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
-  box-shadow: inset 14px 9px 30px #000; }
+  box-shadow: inset 14px 9px 30px #000;
+  z-index: 18; }
 
 .ground {
   grid-row: 8/11;
@@ -224,7 +259,7 @@ a {
   height: 80%;
   width: 100%;
   clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
-  z-index: 20; }
+  z-index: 35; }
 
 .foundation {
   grid-row: 8/11;
@@ -234,7 +269,7 @@ a {
   width: 100%;
   align-items: top;
   transform: translateY(-22px);
-  z-index: 20; }
+  z-index: 35; }
 
 .foundation-lhs {
   grid-row: 7;
@@ -242,7 +277,7 @@ a {
   background-color: #D39F6F;
   height: 80%;
   width: 100%;
-  z-index: 20; }
+  z-index: 37; }
 
 .foundation-rhs {
   grid-row: 7;
@@ -251,7 +286,7 @@ a {
   height: 80%;
   width: 100%;
   clip-path: polygon(45% 0%, 100% 30%, 100% 100%, 30% 100%, 0 100%, 0% 5%);
-  z-index: 20; }
+  z-index: 35; }
 
 .front-tent {
   grid-row: 7;
@@ -260,7 +295,8 @@ a {
   height: 70%;
   width: 100%;
   clip-path: polygon(27% 67%, 100% 88%, 100% 100%, 50% 100%, 0 100%, 0 72%);
-  border: 2px solid black; }
+  border: 2px solid black;
+  z-index: 35; }
 
 .lhs-arch1 {
   width: 75%;
@@ -269,7 +305,8 @@ a {
   grid-row: 6;
   grid-column: 6/8;
   clip-path: polygon(0 1%, 100% 0%, 100% 100%, 27% 100%);
-  border-top-right-radius: 100%; }
+  border-top-right-radius: 100%;
+  z-index: 35; }
 
 .lhs-arch2 {
   width: 100%;
@@ -280,7 +317,8 @@ a {
   clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
   border-top-right-radius: 100%;
   z-index: 6;
-  transform: scale(1.2); }
+  transform: scale(1.2);
+  z-index: 35; }
 
 .lhs-arch3 {
   width: 80%;
@@ -291,9 +329,9 @@ a {
   clip-path: polygon(0 1%, 100% 0%, 100% 100%, 40% 100%);
   border-top-right-radius: 100%;
   padding-top: 4px;
-  z-index: 8;
   transform: translateX(70px);
-  border: 1px solid #000; }
+  border: 1px solid #000;
+  z-index: 37; }
 
 .lhs-arch4 {
   width: 75%;
@@ -304,7 +342,7 @@ a {
   clip-path: polygon(0 1%, 100% 0%, 100% 100%, 20% 100%);
   border-top-right-radius: 100%;
   transform: translateX(70px);
-  z-index: 7; }
+  z-index: 35; }
 
 .rhs-arch1 {
   width: 90%;
@@ -314,7 +352,7 @@ a {
   grid-column: 8/11;
   border-top-left-radius: 100%;
   clip-path: polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
-  z-index: 1;
+  z-index: 36;
   transform: translateX(15px);
   border: 2px solid #000;
   transform: scale(1.1); }
@@ -327,7 +365,7 @@ a {
   grid-column: 8/11;
   border-top-left-radius: 100%;
   clip-path: polygon(100% 1%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
-  z-index: 0;
+  z-index: 33;
   transform: translateX(58px);
   border: 2px solid #000; }
 
@@ -338,10 +376,10 @@ a {
   grid-row: 5/7;
   grid-column: 9/13;
   border-top-left-radius: 100%;
-  clip-path: polygon(100% -6%, 82% 60%, 70% 100%, -8% 62%, -55% -19%);
+  clip-path: polygon(100% -1%, 82% 56%, 75% 151%, -34% 62%, -55% -19%);
   transform: translateX(15px);
   border: 1px solid #000;
-  z-index: 3; }
+  z-index: 36; }
 
 .rhs-arch4 {
   width: 80%;
@@ -352,7 +390,8 @@ a {
   border-top-left-radius: 100%;
   clip-path: polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
   transform: translateX(19px);
-  border: 1px solid #000; }
+  border: 1px solid #000;
+  z-index: 34; }
 
 .rhs-arch5 {
   width: 80%;
@@ -364,7 +403,7 @@ a {
   clip-path: polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
   transform: translateY(42px);
   border: 1px solid #000;
-  z-index: 6; }
+  z-index: 39; }
 
 .rhs-arch6 {
   width: 66%;
@@ -376,7 +415,7 @@ a {
   clip-path: polygon(100% 2%, 84% 60%, 75% 100%, 0% 100%, 10% 6%);
   transform: translateY(42px);
   border: 1px solid #000;
-  z-index: 5; }
+  z-index: 14; }
 
 /*  ////////////////////////////////////   */
 /* bridge */
@@ -403,7 +442,8 @@ a {
   grid-column: 1/31;
   height: 20%;
   width: 100%;
-  background-color: #434554; }
+  background-color: #434554;
+  z-index: 15; }
 
 .bridge-arch {
   grid-row: 1/6;
@@ -411,7 +451,8 @@ a {
   border-top-left-radius: 100%;
   clip-path: polygon(100% 0%, 84% 60%, 100% 100%, 0% 100%, 10% 6%);
   transform: translateY(42px);
-  border: 20px solid #434554; }
+  border: 20px solid #434554;
+  z-index: 15; }
 
 .bridge-arch2 {
   grid-row: 2/6;
@@ -419,7 +460,8 @@ a {
   border-top-left-radius: 100%;
   clip-path: polygon(100% 0%, 84% 60%, 100% 100%, 0% 100%, 10% 6%);
   transform: translateY(42px);
-  border: 10px solid #434554; }
+  border: 10px solid #434554;
+  z-index: 15; }
 
 .steelv1 {
   grid-row: 4/7;
@@ -428,7 +470,8 @@ a {
   height: 69%;
   width: 26%;
   transform: scale(0.83);
-  transform: translateY(32px); }
+  transform: translateY(32px);
+  z-index: 15; }
 
 .steel {
   grid-row: 2/7;
@@ -436,7 +479,8 @@ a {
   background-color: #434554;
   height: 100%;
   width: 34%;
-  transform: scale(0.75); }
+  transform: scale(0.75);
+  z-index: 15; }
 
 .steel1 {
   grid-row: 4/7;
@@ -444,7 +488,8 @@ a {
   background-color: #434554;
   height: 100%;
   width: 26%;
-  transform: translateY(-37px); }
+  transform: translateY(-37px);
+  z-index: 15; }
 
 .steel2 {
   grid-row: 3/6;
@@ -452,7 +497,8 @@ a {
   background-color: #434554;
   height: 109%;
   width: 26%;
-  transform: translateY(7px); }
+  transform: translateY(7px);
+  z-index: 15; }
 
 .steel3 {
   grid-row: 2/7;
@@ -460,7 +506,8 @@ a {
   background-color: #434554;
   height: 99%;
   width: 33%;
-  transform: scale(0.83); }
+  transform: scale(0.83);
+  z-index: 15; }
 
 .steel4 {
   grid-row: 2/7;
@@ -469,7 +516,7 @@ a {
   height: 90%;
   width: 26%;
   transform: scale(0.95);
-  z-index: 7; }
+  z-index: 15; }
 
 .steel5 {
   grid-row: 2/7;
@@ -477,7 +524,7 @@ a {
   background-color: #434554;
   height: 90%;
   width: 26%;
-  z-index: 7; }
+  z-index: 15; }
 
 .steel6 {
   grid-row: 2/7;
@@ -485,7 +532,8 @@ a {
   background-color: #434554;
   height: 90%;
   width: 26%;
-  transform: translateY(-11px); }
+  transform: translateY(-11px);
+  z-index: 15; }
 
 .steel7 {
   grid-row: 2/7;
@@ -493,7 +541,8 @@ a {
   background-color: #434554;
   height: 90%;
   width: 26%;
-  transform: translateY(-15px); }
+  transform: translateY(-15px);
+  z-index: 15; }
 
 /* ///////////////////////////////////////////// */
 /*  ferry */
