--- a/scss/afternoon.scss
+++ b/scss/afternoon.scss
@@ -39,7 +39,37 @@ body {
 a {
   color: white;
   text-decoration: none;
+  font-family: 'Maven Pro', sans-serif;
+}
+// navigation//////////////////
+.morning {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 2;
+  z-index: 20;
+  // transform:rotate(45deg);
+}
 
+.afternoon {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 3;
+  z-index: 20;
+  // transform:rotate(45deg);
+}
+
+.night {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 4/5;
+  z-index: 20;
+  // transform:rotate(45deg);
 }
 
 .afternoon1{
@@ -48,7 +78,38 @@ a {
   background: linear-gradient(to bottom right, #0F7FD3, yellow);
 }
 
+// parachute man///////////////////
 
+.parachute{
+  grid-row: 1;
+  grid-column: 8/10;
+  background-color: red;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
+  box-shadow:inset 14px 9px 30px #000;
+}
+
+.parachute-shape{
+  grid-row: 1;
+  grid-column: 8/10;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 25px;
+  padding-top:32px;
+  color: white;
+}
+
+.parachute-string{
+  clip-path: polygon(0 0, 100% 0, 65% 100%, 34% 100%);
+  grid-row: 2;
+  grid-column: 8/10;
+  border:10px solid black;
+}
+
+.parachute-person{
+
+}
 
 // shark ////////////////////////
 
@@ -82,7 +143,7 @@ a {
 	width:70px;
 	height:70px;
 	border-radius:50%;
-	background:#D3CE57;
+	background:white;
 	opacity:0.9;
 	box-shadow: 0px 0px 40px 15px white;
   z-index: 5;
@@ -529,7 +590,7 @@ a {
   background-color: #434554;
   height: 100%;
   width: 26%;
-  transform: translateY(-37px);
+  transform: translateY(-32px);
   z-index: 15;
 }
 .steel2 {
