--- a/css/night.css
+++ b/css/night.css
@@ -13,7 +13,32 @@ body {
 
 a {
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+  font-family: 'Maven Pro', sans-serif; }
+
+.morning {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 2;
+  z-index: 20; }
+
+.afternoon {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 3;
+  z-index: 20; }
+
+.night {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  grid-row: 1;
+  grid-column: 4/5;
+  z-index: 20; }
 
 .star1 {
   grid-row: 3;
