--- a/scss/afternoon.scss
+++ b/scss/afternoon.scss
@@ -42,34 +42,77 @@ a {
   font-family: 'Maven Pro', sans-serif;
 }
 // navigation//////////////////
+
 .morning {
   color: white;
   text-decoration: none;
   font-size: 30px;
-  grid-row: 1;
-  grid-column: 2;
+  grid-row: 9;
+  grid-column: 3/5;
+  background-color: lightseagreen;
   z-index: 20;
+  border-radius: 50%;
+  padding: 18px;
+  box-shadow: inset 23px 12px 15px #43544F
   // transform:rotate(45deg);
+}
+
+.fish-tailam{
+  grid-row: 9;
+  grid-column: 4;
+  background-color: lightseagreen;
+  z-index: 19;
+  clip-path: polygon(100% 0, 0 48%, 100% 100%);
+  transform:translateX(21px);
+  box-shadow: inset 23px 12px 15px #43544F
 }
 
 .afternoon {
   color: white;
   text-decoration: none;
   font-size: 30px;
-  grid-row: 1;
-  grid-column: 3;
+  grid-row: 10;
+  grid-column: 14/16;
   z-index: 20;
+  background-color: grey;
+  border-radius: 50%;
+  padding: 18px;
+  box-shadow: inset 23px 12px 15px black;
   // transform:rotate(45deg);
+}
+
+.fish-tailpm{
+  grid-row: 10;
+  grid-column: 15;
+  background-color: grey;
+  z-index: 19;
+  clip-path: polygon(100% 0, 0 48%, 100% 100%);
+  transform:translateX(21px);
+  box-shadow: inset 23px 12px 15px black;
 }
 
 .night {
   color: white;
   text-decoration: none;
   font-size: 30px;
-  grid-row: 1;
-  grid-column: 4/5;
+  grid-row: 9;
+  grid-column: 24/26;
   z-index: 20;
+  background-color: black;
+  border-radius: 50%;
+  padding: 18px;
+  box-shadow: inset 15px 12px 15px white;
   // transform:rotate(45deg);
+}
+
+.fish-tailnight{
+  grid-row: 9;
+  grid-column: 23/24;
+  background-color: grey;
+  z-index: 19;
+  clip-path: polygon(100% 49%, 0 0, 0 100%);
+  transform:translateX(21px);
+  box-shadow: inset 7px 21px 7px white;
 }
 
 .afternoon1{
@@ -84,9 +127,13 @@ a {
   grid-row: 1;
   grid-column: 8/10;
   background-color: red;
+  position: relative;
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
   box-shadow:inset 14px 9px 30px #000;
+  animation-name: parachute-jump;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
 .parachute-shape{
@@ -98,6 +145,10 @@ a {
   font-size: 25px;
   padding-top:32px;
   color: white;
+  position: relative;
+  animation-name: parachute-jump;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
 .parachute-string{
@@ -105,27 +156,44 @@ a {
   grid-row: 2;
   grid-column: 8/10;
   border:10px solid white;
+  position: relative;
   z-index: 7;
+  animation-name: parachute-jump;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
-.parachute-person{
+.parachute-person {
   clip-path: polygon(50% 0, 60% 31%, 98% 35%, 64% 49%, 79% 91%, 50% 70%, 21% 91%, 36% 46%, 2% 35%, 41% 31%);
   grid-row: 3;
   grid-column: 8/10;
   background-color: black;
+  position: relative;
   transform:translateY(-45px);
-  box-shadow: inset -10px 12px 31px #fff
-
+  box-shadow: inset -10px 12px 31px #fff;
+  animation-name: parachute-jump;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
 .person-head{
   grid-row: 2;
   grid-column: 8/10;
   background-color: black;
+  position: relative;
   border-radius: 100%;
   transform:scale(0.4);
   box-shadow: inset -10px 12px 31px #fff;
+  animation-name: parachute-jump;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
+
+@keyframes parachute-jump {
+  from { top:-200px;}
+  to { top: 357px;}
+}
+
 
 // shark ////////////////////////
 
